# chatter

./: .env  .env.ghpage  .env.server  .eslintrc.cjs  .gitignore  .prettierrc.json  CNAME  Cargo.toml  README.md  Shuttle.toml  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rsw.toml  tailwind.config.cjs  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: main.yml
.pnpm/: lock.yaml
assets/: AboutView-18e987b3.js  AboutView-26944818.js  AboutView-a0831721.js  AboutView-b5fc4b87.js  AboutView-b92f64d4.js  AboutView-cfa33382.js  Playing-12e441d2.js  Playing-13227c51.css  Playing-17b60586.js  Playing-19a3554e.css  Playing-2567d39d.css  Playing-25d4b6b0.js  Playing-28232fa1.js  Playing-2fe57084.js  Playing-6f0c4ba7.js  Playing-9ac158e0.js  Playing-9e510b0e.js  Playing-c78c6e65.js  Playing-d79ce0c0.css  Playing-f07ac37b.js  VirtuosoDemoView-2fec929f.js  VirtuosoDemoView-3da3f02a.js  VirtuosoDemoView-45bd2ebd.js  VirtuosoDemoView-b315361c.js  VirtuosoDemoView-c73fd1f1.js  VirtuosoDemoView-c8ad675f.js  index-25c340fc.js  index-3ff15f47.css  index-469f3de6.js  index-505cc680.js  index-5194ee68.js  index-523856f5.js  index-65b0abcf.css  index-6b522bda.css  index-7bb84f7d.css  index-89f54b3f.js  index-9de7449f.js  index-B63TdhFG.js  index-BA78MrRz.css  index-BGJen5S7.js  (+41 more)
server/: .gitignore  Cargo.toml
server/src/: lib.rs  main.rs  router.rs  translate.rs
src/: App.tsx  App.vue  App2.vue  NewApp.vue  TailwindApp.vue  index.css  main.css  main.ts  main.tsx
src-core/: Cargo.toml
src-core/src/: lib.rs  text_recognize.rs  translate.rs
src-server/: Cargo.toml
src-server/src/: lib.rs  main.rs  router.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  text_recognize.rs  translate.rs
src-wasm/: Cargo.toml
src-wasm/src/: lib.rs
src/api/: index.ts
src/assets/: app.css  main.css
src/components/: ChatterBoard.tsx  Content.vue  ContentDisplay.vue  ContentLine.vue  HomeInput.tsx  HomeInput.vue  ImmersiveKeyboard.vue  KdbKeyboard.vue  KeyBoard.tsx  Keyboard.vue  MyComponent.tsx  NavbarTop.vue  Sidebar.tsx  TextBoard.tsx  TextInput.tsx  TextLine.tsx
src/router/: index.ts
src/stores/: content.ts  index.ts  virtuoso.ts
src/utils/: RustAgent.ts  key_listener.ts  rust_agent.ts  store.ts  translate.ts
src/views/: Feature.vue  Header.vue  HeaderUI.vue  Home.vue  HomeInputView.vue  HomeView.vue  ImmersiveView.vue  Playing.vue  PlayingView.vue  VirtuosoDemoView.vue
translater/: .gitignore  Cargo.toml
translater/src/: main.rs  router.rs  translate.rs
