[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = {version="1.28.2", features=["full"]}
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "fs", "trace"] }
http = "0.2.9"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1"

log = "0"
tracing = "0.1.37"
tracing-appender = "0.2"
tracing-subscriber = {version = "0.3" ,features=["local-time","env-filter", "serde"]}
time = {version="0.3", features=["local-offset","macros"]}
anyhow = "1"
lazy_static = "1"
reqwest = {version="0.11", features=["json"]}

rust-embed = "6"
mime_guess = "2"

