[package]
name = "chatter-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tokio = {version="1.28.2", features=["full"]}
tower = "0.4.13"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
http = "1"
shuttle-axum = "0.38"
shuttle-runtime = "0.38"

serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1"

log = "0"
tracing = "0.1.37"
tracing-appender = "0.2"
tracing-subscriber = {version = "0.3" ,features=["local-time","env-filter", "serde"]}
time = {version="0.3", features=["local-offset","macros"]}
anyhow = "1"
reqwest ={version = "0.11", default-features = false, features=["json","rustls-tls","rustls-tls-manual-roots", "gzip"]}
once_cell = "1"

rust-embed = "8"
mime_guess = "2"


