[package]
name = "chatter-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1"
reqwest ={version = "0.12", default-features = false, features=["json","rustls-tls","rustls-tls-manual-roots", "gzip"]}
once_cell = "1"
regex= "1.10"

instant = { version = "0.1", features = [ "wasm-bindgen" ] }
cached = {version="0.45",features=["proc_macro","async"]}
tokio = {version="1.28.2", features= ["sync"] }

[dev-dependencies]

tokio = {version="1.28.2", features= ["full"] }
