[package]
name = "chatter-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
http = "1.1"
shuttle-axum = "0.52.0"
shuttle-runtime = "0.52.0"
tokio = "1.28.2"

log = "0.4"
tracing = "0.1.37"
tracing-appender = "0.2"
tracing-subscriber = {version = "0.3" ,features=["local-time","env-filter", "serde"]}
time = {version="0.3", features=["local-offset","macros"]}
anyhow = "1.0"

tower = "0.4.13"
tower-http = "0.5.2"

rust-embed = "8"
mime_guess = "2"

chatter-core={path="../src-core"}
