[package]
name = "Chatter"
version = "0.1.0"
description = "Spell words and translate"
authors = ["cyejing"]
license = ""
repository = ""
default-run = "Chatter"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [] }

tokio = {version="1.28.2", features= ["full"] }

log = "0"
tracing = "0.1.37"
tracing-appender = "0.2"
tracing-subscriber = {version = "0.3" ,features= ["local-time", "env-filter", "serde"] }
time = {version="0.3", features= ["local-offset", "macros"] }

reqwest = {version = "0.12", default-features = false, features= ["json", "rustls-tls", "rustls-tls-manual-roots", "gzip"] }
anyhow = "1"
once_cell = "1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
